--- a/templates/client_detail.html
+++ b/templates/client_detail.html
@@ -58,7 +58,7 @@
     </p>
 
     <form method="post"
-          action="{{ url_for('create_cotation', client_id=client.id) }}">
+          action="{{ url_for('client_detail', client_id=client.id) }}">
         <input type="hidden" name="csrf_token" value="{{ csrf_token }}">
 
         <div class="row g-3">
